--- a/case3/lht_feb.html
+++ b/case3/lht_feb.html
@@ -20,6 +20,8 @@
    <title>Lyman Hall Theater in February</title>
    <link href="lht_reset.css" rel="stylesheet" />
    <link href="lht_styles.css" rel="stylesheet" />
+   <link href="lht_tables.css" rel="stylesheet" />
+   <link href="lht_columns.css" rel="stylesheet" />
 </head>
 
 <body>
